# femtoflatbuffers

./: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
src/: components.rs  heapless_components.rs  lib.rs  table.rs
tests/: basic.rs  list.rs  nested.rs  test.fbs  test_generated.rs  unions.rs
