[package]
name = "femtoflatbuffers"
version = "0.1.0"
edition = "2024"

[dependencies]
femtoflatbuffers-derive = {path = "derive"}
thiserror = "2.0.17"
heapless = {version = "0.9.0", optional = true}

[dev-dependencies]
flatbuffers = "25.9.0"

[features]
default = []
alloc = []
heapless = ["dep:heapless"]


[workspace]
members = ["derive"]